updata tutorial this one has no error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(my_lm)
 export(my_pow)
 export(my_rf_cv)
 export(my_t.test)
+import(randomForest)
 importFrom(magrittr,"%>%")
 importFrom(tibble,tibble)
